[package]
name = "ding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
axum = "0.5.15"
chrono = "0.4.21"
clap = { version = "3.2.16", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.143"
serde_json = "1.0.83"
time = { version = "0.3.13", features = ["macros"] }
tokio = { version = "1.20.1", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "local-time", "time"] }
validator = { version = "0.16.0", features = ["derive"] }

[build-dependencies]
vergen = "7.3.2"
anyhow = "1.0.61"
